--- a/src/app/layout-shell/sidenav/sidenav.component.html
+++ b/src/app/layout-shell/sidenav/sidenav.component.html
@@ -5,7 +5,8 @@
     <mat-sidenav-container class="example-sidenav-container" >
   
       <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
-        [fixedInViewport]="mobileQuery.matches" fixedTopGap="55">
+        [fixedInViewport]="mobileQuery.matches" fixedTopGap="55"
+        position="end">
         <mat-nav-list >
           <a mat-list-item [ngClass]="selectedLink=='main' ? 'active-link' : 'hover hover-1'" (click)="routeTo('/')" > STRONA GŁÓWNA</a>
         </mat-nav-list>
