--- a/src/app/workspace/welcome-tab/welcome-tab.component.html
+++ b/src/app/workspace/welcome-tab/welcome-tab.component.html
@@ -1,4 +1,8 @@
+<div *ngIf ="isLoading"  [ngClass]="mobileQuery.matches ? 'spinner-container-mobile' : 'spinner-container'">
+  <app-spinner></app-spinner>
+</div>
 
+      <div [ngStyle]="{'visibility': isLoading ? 'hidden' : 'visible' }">
         <div *ngIf="!mobileQuery.matches" class="demo-carousel" [style.height]="100">
           <mat-carousel
             #matCarousel
@@ -24,6 +28,7 @@
               image={{slide.imageUrl}}
               [overlayColor]="overlayColor"
               [hideOverlay]="hideOverlay"
+            
             >
               <ng-container >
                 <div class = "horizontal-photo-description-container">
@@ -52,7 +57,8 @@
              kompleksowe projekty inwestycyjne w branży mieszkaniowego budownictwa jedno i wielorodzinnego, 
              obejmujące całość procesu deweloperskiego – począwszy od pozyskania gruntów, poprzez projektowanie we 
              współpracy z renomowanymi biurami architektonicznymi, po uzyskanie prawomocnych zezwoleń na budowę, nadzór 
-             nad wykonawstwem budowlanym, aż do przekazania gotowych domów lub mieszkań klientom i zarządzania całym obiektem.</p>
+             nad wykonawstwem budowlanym, aż do przekazania gotowych domów lub mieszkań klientom i zarządzania całym obiektem.
+            </p>
         </div>
 
         <div class ="current-investments-container">
@@ -68,6 +74,7 @@
                   [title]= "flipImage.title" 
                   [imageUrl]= "flipImage.realEstateImageUrl"
                   [realEstateName] = "flipImage.realEstateName"
+                  appImageloaded (imageLoaded)="loadedImages()"
                   ></app-flip-card>
           </div> 
         </div>
@@ -120,3 +127,5 @@
             <p> KRS 0000653927, NIP 6793139120</p>
           </div>
         </div>
+
+</div>
