--- a/src/app/workspace/welcome-tab/welcome-tab.component.scss
+++ b/src/app/workspace/welcome-tab/welcome-tab.component.scss
@@ -1,3 +1,15 @@
+.spinner-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 18%;
+}
+
+.spinner-container-mobile {
+    display: flex;
+    justify-content: center;
+    margin-top: 65%;
+}
+
 .container {
     width: 100%;
 }
@@ -130,3 +142,4 @@
         width: 650px
     }
 }
+
